# Robot_Controller_Module

./: .travis.yml  CMakeLists.txt  LICENSE.md  README.md
app/: CMakeLists.txt  Navigation.cpp  SteerAlgorithm.cpp  main.cpp
docs/: Doxyfile
docs/html/: _mock_navigation_8hpp.html  _mock_navigation_8hpp__dep__incl.map  _mock_navigation_8hpp__dep__incl.md5  _mock_navigation_8hpp__incl.map  _mock_navigation_8hpp_source.html  _navigation_8cpp.html  _navigation_8cpp__incl.map  _navigation_8cpp__incl.md5  _navigation_8hpp.html  _navigation_8hpp__dep__incl.map  _navigation_8hpp__incl.map  _navigation_8hpp__incl.md5  _navigation_8hpp_source.html  _steer_algorithm_8cpp.html  _steer_algorithm_8cpp__incl.map  _steer_algorithm_8cpp__incl.md5  _steer_algorithm_8hpp.html  _steer_algorithm_8hpp__dep__incl.map  _steer_algorithm_8hpp__dep__incl.md5  _steer_algorithm_8hpp_source.html  annotated.html  annotated_dup.js  class_mock_navigation-members.html  class_mock_navigation.html  class_mock_navigation__inherit__graph.map  class_mock_navigation__inherit__graph.md5  class_navigation-members.html  class_navigation.html  class_navigation.js  class_navigation__coll__graph.md5  class_navigation__inherit__graph.map  class_steer_algorithm-members.html  class_steer_algorithm.html  class_steer_algorithm.js  class_steer_algorithm__inherit__graph.map  class_steer_algorithm__inherit__graph.md5  classes.html  classgnuplotio_1_1_array_traits-members.html  classgnuplotio_1_1_array_traits.html  classgnuplotio_1_1_array_traits_3_01_t[_n]_4-members.html  (+206 more)
docs/latex/: _mock_navigation_8hpp.tex  _mock_navigation_8hpp__dep__incl.md5  _mock_navigation_8hpp__incl.md5  _navigation_8cpp.tex  _navigation_8cpp__incl.md5  _navigation_8hpp.tex  _navigation_8hpp__dep__incl.md5  _navigation_8hpp__incl.md5  _steer_algorithm_8cpp.tex  _steer_algorithm_8cpp__incl.md5  _steer_algorithm_8hpp.tex  _steer_algorithm_8hpp__dep__incl.md5  annotated.tex  class_mock_navigation.tex  class_mock_navigation__coll__graph.md5  files.tex  (+101 more)
include/: MockNavigation.hpp  Navigation.hpp  SteerAlgorithm.hpp  lib.hpp
results/: cppcheck_output.txt  cpplint_output.txt
test/: CMakeLists.txt  main.cpp  test.cpp  testMockNavigation.cpp  testNavigation.cpp  testSteerAlgorithm.cpp
(+266 files in other folders)
